--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
  body{
     font-family: Arial, Helvetica, sans-serif;
+    
  }
 
  header .heroText {
@@ -21,11 +22,16 @@
     display: flex;
     justify-content: space-around;
     margin-block: 50px;
+    border: 10px ridge violet; 
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-image: url('./img/tio-sam.jpg');
 }
 
 .container #images img{
     width: 300px;
     height: 300px;
+  
 }
 
 #buttons {
@@ -38,6 +44,10 @@
     width: 700px;
     background-color: aqua;
     font-family: "Poetsen One", sans-serif;
+}
+
+.colums{
+    border: 10px ridge blue; 
 }
 
 #results{
